stop scrollbars appearing on windows screens

--- a/src/scss/base/_scaffold.scss
+++ b/src/scss/base/_scaffold.scss
@@ -3,4 +3,5 @@ html,body {
   margin: 0;
   background: #000;
   text-align: center;
+  overflow: hidden;
 }
